feat: complete password reset system with email integration, nodemailer package

--- a/configs/dev.env
+++ b/configs/dev.env
@@ -3,3 +3,7 @@ MONGODB_URI=mongodb://localhost:27017/shop-api
 JWT_SECRET="gn6xo4pnqYjWKBqoTPXDnI19lxLDkovg2m9cPAEarwM="
 JWT_EXPIRES_IN="30d"
 NODE_ENV="development"
+EMAIL_USERNAME=3a0016449f93f8
+EMAIL_PASSWORD=af238f18a679e9
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=2525
