--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.6",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "nodemailer": "^8.0.1",
+    "sharp": "^0.34.5",
     "validator": "^13.15.26"
   },
   "devDependencies": {
