--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.6",
+    "dotenv": "^17.3.1",
     "env-cmd": "^11.0.0",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
