--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An e-commerce web application API",
   "main": "app.js",
   "scripts": {
-    "dev": "env-cmd -f ./configs/dev.env nodemon src/app.js",
+    "dev": "env-cmd -f ./configs/dev.env nodemon server.js",
     "start": "node src/app.js"
   },
   "keywords": [],
@@ -23,7 +23,8 @@
     "multer": "^2.0.2",
     "nodemailer": "^8.0.1",
     "sharp": "^0.34.5",
-    "validator": "^13.15.26"
+    "validator": "^13.15.26",
+    "zarinpal-checkout": "^0.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
